deploy/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: rupert
  labels:
    service: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      service: frontend
  template:
    metadata:
      labels:
        service: frontend
    spec:
      containers:
        - name: frontend
          image: kamronbekdev/rupert-frontend:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5173
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rupert
  namespace: poddle-system
  labels:
    service: rupert
spec:
  replicas: 1
  selector:
    matchLabels:
      service: rupert
  template:
    metadata:
      labels:
        service: rupert
    spec:
      volumes:
        - name: config-volume
          configMap:
            name: config
            items:
              - key: config.json
                path: config.json
      containers:
        - name: backend
          image: kamronbekdev/rupert-backend:0.0.1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: config-volume
              mountPath: /app/config.json
              subPath: config.json
              readOnly: true
          readinessProbe:
            httpGet: { path: /health, port: 8000 }
            initialDelaySeconds: 10
            periodSeconds: 30
            timeoutSeconds: 1
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 10
            periodSeconds: 120
            timeoutSeconds: 1
            failureThreshold: 3
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
