deploy/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: rupert
spec:
  type: ClusterIP
  selector:
    service: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5173
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: rupert
spec:
  type: ClusterIP
  selector:
    service: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
